# SearchToLearn

./: .env  README.md  api_configration.py  app.py  app1.py  chat_pdf.py  chatpdf2.py  level_names.py  main.py  prompt_and_response.py  pyproject.toml  roadmap.py  style.css  temp.py  translate.py
searchtolearn/: pyvenv.cfg
searchtolearn/Scripts/: activate  activate.bat  jsondiff  jsonpatch  jsonpointer
tests/: test_prompt_and_response.py
